Fix spacing for content

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -55,11 +55,11 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
 }
 
 .buttons button {
   padding: 8px 16px;
-  margin-top: 16px;
 }
 
 .footer {
